# cost-splitter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: unit_test.yaml
src/: actions.rs  billing.rs  charges.rs  lib.rs  main.rs  ocr.rs  utils.rs
tests/: actions.rs  charges.rs  ocr.rs  utils.rs
