[package]
name = "cost_splitter"
version = "0.1.0"
authors = ["anthonycato <catoa0608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
colored = "2.0.0"
