[package]
name = "splitter"
version = "0.1.0"
authors = ["anthonycato <catoa0608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
leptess = "0.13.4"
aws-config = "0.54.1"
aws-sdk-textract = "0.24.0"
tokio = { version = "1", features = ["full"] }
