[package]
name = "splitter"
version = "0.1.0"
authors = ["anthonycato <catoa0608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "2.2.1"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
aws-config = { version = "0.101.0", features = ["behavior-version-latest"] }
aws-sdk-textract = "0.38.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
